// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsultationPreview /> should render correctly with a given consultation 1`] = `
<Col
  bsClass="col"
  className="d-flex"
  componentClass="div"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <Card
    className="consultation__preview"
    id="firstConsultation"
  >
    <ConsultationPreviewCover
      consultation={
        Object {
          "$refType": null,
          "contributions": Object {
            "totalCount": 12,
          },
          "contributors": Object {
            "totalCount": 1,
          },
          "id": "firstConsultation",
          "illustration": null,
          "title": "Première consultation",
          "url": "https://capco.dev/project/strategie-technologique-de-letat-et-services-publics/consultation/etape-de-multi-consultation/consultation/premiere-consultation",
          "votesCount": 0,
        }
      }
    />
    <ConsultationPreviewBody
      consultation={
        Object {
          "$refType": null,
          "contributions": Object {
            "totalCount": 12,
          },
          "contributors": Object {
            "totalCount": 1,
          },
          "id": "firstConsultation",
          "illustration": null,
          "title": "Première consultation",
          "url": "https://capco.dev/project/strategie-technologique-de-letat-et-services-publics/consultation/etape-de-multi-consultation/consultation/premiere-consultation",
          "votesCount": 0,
        }
      }
    />
  </Card>
</Col>
`;

exports[`<ConsultationPreviewBody /> should render correctly with a given consultation 1`] = `
<Body>
  <Title
    tagName="h3"
  >
    <a
      href="https://capco.dev/project/strategie-technologique-de-letat-et-services-publics/consultation/etape-de-multi-consultation/consultation/premiere-consultation"
    >
      Première consultation
    </a>
  </Title>
  <div
    className="flex-1"
  >
    <TagsList>
      <ProjectPreviewCounter
        icon="cap-baloon-1"
        label="project.preview.counters.contributions"
        showZero={true}
        value={1}
      />
      <ProjectPreviewCounter
        icon="cap-hand-like-2-1"
        label="project.preview.counters.votes"
        showZero={true}
        value={0}
      />
      <ProjectPreviewCounter
        icon="cap-user-2-1"
        label="project.preview.counters.contributors"
        showZero={true}
        value={1}
      />
    </TagsList>
  </div>
</Body>
`;

exports[`<ConsultationPreviewCover /> should render with a default illustration when consultation does not have an image 1`] = `
<Cover
  height="175px"
  width="auto"
>
  <a
    alt="Première consultation"
    href="https://capco.dev/project/strategie-technologique-de-letat-et-services-publics/consultation/etape-de-multi-consultation/consultation/premiere-consultation"
  >
    <div
      className="bg--project"
    >
      <DefaultProjectImage />
    </div>
  </a>
</Cover>
`;

exports[`<ConsultationPreviewCover /> should render with an illustration when consultation have an image 1`] = `
<Cover
  height="175px"
  width="auto"
>
  <a
    alt="Première consultation"
    href="https://capco.dev/project/strategie-technologique-de-letat-et-services-publics/consultation/etape-de-multi-consultation/consultation/premiere-consultation"
  >
    <img
      alt="Première consultation"
      className="img-responsive"
      src="https://capco.dev/media/default/0001/01/13ff68eab987849ccef72a15bc6a1d74905fb0f6.png"
    />
  </a>
</Cover>
`;
